--- a/app/assets/stylesheets/globals/_variables.css.scss
+++ b/app/assets/stylesheets/globals/_variables.css.scss
@@ -33,6 +33,6 @@ $gray-lighter: #5C6D82;
 $peach: #FFDAB9;
 
 // FONTS
-$script: 'Rochester', script;
-$base: 'Lato', sans-serif;
-$headers: 'Raleway', sans-serif;
+$rochester: 'Rochester', script;
+$lato: 'Lato', sans-serif;
+$raleway: 'Raleway', sans-serif;
