--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,8 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .class-bg {
-	//background-image: url("http://www.uglydogbooks.com/wp-content/uploads/2014/04/books.jpg");
-	//background-size: cover;
 	background-color: $gray-lighter;
 	min-height: 70px;
 	color: white;
@@ -15,12 +13,14 @@
 }
 
 .dash-profile {
-  min-height:600px;
+  margin-top: 20px;
 }
 
 .prof-pic-circle {
   border-radius:50%;
-  max-height: 150px;
+  height: 140px;
+  width: 140px;
+  margin-top: 10px;
 }
 
 .total-points {
